--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@ dmypy.json
 G279.5-0.5IFx/
 
 G285.5-0.5IFx/
+
+auto_bane_cluster.py
+
+auto_phot_table.py
+
+compare_outliers.py
+
+assign_id.py
